base.core/src/main/java/eapli/base/question/domain/ANTLRExam/ExamANTLRParser.java
// Generated from C:/Users/Joao Laptop/OneDrive - Instituto Superior de Engenharia do Porto/Documents/sem4pi-22-23-27/base.core/src/main/java/eapli/base/question/domain\ExamANTLR.g4 by ANTLR 4.12.0
package eapli.base.question.domain.ANTLRExam;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class ExamANTLRParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.12.0", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		COLON=1, OPENBRACE=2, CLOSEBRACE=3, OPENBRACKETS=4, CLOSEBRACKETS=5, COMMA=6, 
		EXAM=7, ID=8, MINUS=9, ANSWER=10, ANSWERS=11, TITLE=12, OPENDATE=13, CLOSEDATE=14, 
		SECTIONS=15, OPTIONS=16, OPTION=17, STATEMENT=18, TABLE_A=19, TABLE_B=20, 
		QUOTATION=21, DIFFICULTY=22, TEXTUAL_DESCRIPTION=23, QUESTIONS=24, LIMIT_QUESTIONS=25, 
		SECTION=26, QUESTION=27, TYPE_OF_QUESTION=28, NUMERICAL=29, MULTIPLE_CHOICE=30, 
		MATCHING=31, TRUEORFALSE=32, MISSING_WORDS=33, SHORT_ANSWER=34, TRUE=35, 
		FALSE=36, TYPE=37, INT=38, DATE=39, WS=40, SPECIAL_CHARACTER=41, REAL=42, 
		STRING=43, SPACE=44, PHRASE=45, WORD=46, END=47;
	public static final int
		RULE_prog = 0, RULE_exam = 1, RULE_exam_body = 2, RULE_section = 3, RULE_question = 4, 
		RULE_body = 5, RULE_true_false = 6, RULE_missing_words = 7, RULE_missing_answer = 8, 
		RULE_numerical = 9, RULE_short_awnser = 10, RULE_multiple_choice = 11, 
		RULE_multiple_choice_option = 12, RULE_matching = 13, RULE_matching_tokenA = 14, 
		RULE_matching_tokenB = 15, RULE_matching_answers = 16;
	private static String[] makeRuleNames() {
		return new String[] {
			"prog", "exam", "exam_body", "section", "question", "body", "true_false", 
			"missing_words", "missing_answer", "numerical", "short_awnser", "multiple_choice", 
			"multiple_choice_option", "matching", "matching_tokenA", "matching_tokenB", 
			"matching_answers"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "':'", "'{'", "'}'", "'['", "']'", "','", "'Exam'", "'ID'", "'-'", 
			"'Answer'", "'Answers'", "'Title'", "'Open Date'", "'Close Date'", "'Sections'", 
			"'Options'", "'Option'", "'Statement'", "'Table A'", "'Table B'", "'Quotation'", 
			"'Difficulty'", "'Textual Description'", "'Questions'", "'Limit of Questions'", 
			"'Section'", "'Question'", "'Type of Question'", "'Numerical'", "'Multiple Choice'", 
			"'Matching'", "'True or False'", "'Missing Words'", "'Short Answer'", 
			"'True'", "'False'", "'Type'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "COLON", "OPENBRACE", "CLOSEBRACE", "OPENBRACKETS", "CLOSEBRACKETS", 
			"COMMA", "EXAM", "ID", "MINUS", "ANSWER", "ANSWERS", "TITLE", "OPENDATE", 
			"CLOSEDATE", "SECTIONS", "OPTIONS", "OPTION", "STATEMENT", "TABLE_A", 
			"TABLE_B", "QUOTATION", "DIFFICULTY", "TEXTUAL_DESCRIPTION", "QUESTIONS", 
			"LIMIT_QUESTIONS", "SECTION", "QUESTION", "TYPE_OF_QUESTION", "NUMERICAL", 
			"MULTIPLE_CHOICE", "MATCHING", "TRUEORFALSE", "MISSING_WORDS", "SHORT_ANSWER", 
			"TRUE", "FALSE", "TYPE", "INT", "DATE", "WS", "SPECIAL_CHARACTER", "REAL", 
			"STRING", "SPACE", "PHRASE", "WORD", "END"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "ExamANTLR.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ExamANTLRParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgContext extends ParserRuleContext {
		public ExamContext exam() {
			return getRuleContext(ExamContext.class,0);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExamANTLRListener ) ((ExamANTLRListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExamANTLRListener ) ((ExamANTLRListener)listener).exitProg(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExamANTLRVisitor ) return ((ExamANTLRVisitor<? extends T>)visitor).visitProg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(34);
			exam();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExamContext extends ParserRuleContext {
		public TerminalNode EXAM() { return getToken(ExamANTLRParser.EXAM, 0); }
		public TerminalNode COLON() { return getToken(ExamANTLRParser.COLON, 0); }
		public TerminalNode OPENBRACE() { return getToken(ExamANTLRParser.OPENBRACE, 0); }
		public Exam_bodyContext exam_body() {
			return getRuleContext(Exam_bodyContext.class,0);
		}
		public TerminalNode CLOSEBRACE() { return getToken(ExamANTLRParser.CLOSEBRACE, 0); }
		public ExamContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exam; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExamANTLRListener ) ((ExamANTLRListener)listener).enterExam(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExamANTLRListener ) ((ExamANTLRListener)listener).exitExam(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExamANTLRVisitor ) return ((ExamANTLRVisitor<? extends T>)visitor).visitExam(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExamContext exam() throws RecognitionException {
		ExamContext _localctx = new ExamContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_exam);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(36);
			match(EXAM);
			setState(37);
			match(COLON);
			setState(38);
			match(OPENBRACE);
			setState(39);
			exam_body();
			setState(40);
			match(CLOSEBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Exam_bodyContext extends ParserRuleContext {
		public Token exam_id;
		public Token exam_title;
		public Token open_date;
		public Token close_date;
		public TerminalNode ID() { return getToken(ExamANTLRParser.ID, 0); }
		public List<TerminalNode> COLON() { return getTokens(ExamANTLRParser.COLON); }
		public TerminalNode COLON(int i) {
			return getToken(ExamANTLRParser.COLON, i);
		}
		public TerminalNode COMMA() { return getToken(ExamANTLRParser.COMMA, 0); }
		public TerminalNode TITLE() { return getToken(ExamANTLRParser.TITLE, 0); }
		public TerminalNode OPENDATE() { return getToken(ExamANTLRParser.OPENDATE, 0); }
		public TerminalNode CLOSEDATE() { return getToken(ExamANTLRParser.CLOSEDATE, 0); }
		public TerminalNode INT() { return getToken(ExamANTLRParser.INT, 0); }
		public TerminalNode PHRASE() { return getToken(ExamANTLRParser.PHRASE, 0); }
		public List<TerminalNode> DATE() { return getTokens(ExamANTLRParser.DATE); }
		public TerminalNode DATE(int i) {
			return getToken(ExamANTLRParser.DATE, i);
		}
		public List<SectionContext> section() {
			return getRuleContexts(SectionContext.class);
		}
		public SectionContext section(int i) {
			return getRuleContext(SectionContext.class,i);
		}
		public Exam_bodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exam_body; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExamANTLRListener ) ((ExamANTLRListener)listener).enterExam_body(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExamANTLRListener ) ((ExamANTLRListener)listener).exitExam_body(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExamANTLRVisitor ) return ((ExamANTLRVisitor<? extends T>)visitor).visitExam_body(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Exam_bodyContext exam_body() throws RecognitionException {
		Exam_bodyContext _localctx = new Exam_bodyContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_exam_body);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(42);
			match(ID);
			setState(43);
			match(COLON);
			setState(44);
			((Exam_bodyContext)_localctx).exam_id = match(INT);
			setState(45);
			match(COMMA);
			setState(46);
			match(TITLE);
			setState(47);
			match(COLON);
			setState(48);
			((Exam_bodyContext)_localctx).exam_title = match(PHRASE);
			setState(50); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(49);
				section();
				}
				}
				setState(52); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==SECTION );
			setState(54);
			match(OPENDATE);
			setState(55);
			match(COLON);
			setState(56);
			((Exam_bodyContext)_localctx).open_date = match(DATE);
			setState(57);
			match(CLOSEDATE);
			setState(58);
			match(COLON);
			setState(59);
			((Exam_bodyContext)_localctx).close_date = match(DATE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SectionContext extends ParserRuleContext {
		public Token section_id;
		public Token section_des;
		public Token section_difficulty;
		public Token limit;
		public TerminalNode SECTION() { return getToken(ExamANTLRParser.SECTION, 0); }
		public TerminalNode ID() { return getToken(ExamANTLRParser.ID, 0); }
		public List<TerminalNode> COLON() { return getTokens(ExamANTLRParser.COLON); }
		public TerminalNode COLON(int i) {
			return getToken(ExamANTLRParser.COLON, i);
		}
		public TerminalNode COMMA() { return getToken(ExamANTLRParser.COMMA, 0); }
		public TerminalNode OPENBRACE() { return getToken(ExamANTLRParser.OPENBRACE, 0); }
		public TerminalNode TEXTUAL_DESCRIPTION() { return getToken(ExamANTLRParser.TEXTUAL_DESCRIPTION, 0); }
		public TerminalNode DIFFICULTY() { return getToken(ExamANTLRParser.DIFFICULTY, 0); }
		public TerminalNode LIMIT_QUESTIONS() { return getToken(ExamANTLRParser.LIMIT_QUESTIONS, 0); }
		public TerminalNode QUESTIONS() { return getToken(ExamANTLRParser.QUESTIONS, 0); }
		public TerminalNode CLOSEBRACE() { return getToken(ExamANTLRParser.CLOSEBRACE, 0); }
		public List<TerminalNode> INT() { return getTokens(ExamANTLRParser.INT); }
		public TerminalNode INT(int i) {
			return getToken(ExamANTLRParser.INT, i);
		}
		public TerminalNode PHRASE() { return getToken(ExamANTLRParser.PHRASE, 0); }
		public List<QuestionContext> question() {
			return getRuleContexts(QuestionContext.class);
		}
		public QuestionContext question(int i) {
			return getRuleContext(QuestionContext.class,i);
		}
		public SectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_section; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExamANTLRListener ) ((ExamANTLRListener)listener).enterSection(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExamANTLRListener ) ((ExamANTLRListener)listener).exitSection(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExamANTLRVisitor ) return ((ExamANTLRVisitor<? extends T>)visitor).visitSection(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SectionContext section() throws RecognitionException {
		SectionContext _localctx = new SectionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_section);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(61);
			match(SECTION);
			setState(62);
			match(ID);
			setState(63);
			match(COLON);
			setState(64);
			((SectionContext)_localctx).section_id = match(INT);
			setState(65);
			match(COMMA);
			setState(66);
			match(OPENBRACE);
			setState(67);
			match(TEXTUAL_DESCRIPTION);
			setState(68);
			match(COLON);
			setState(69);
			((SectionContext)_localctx).section_des = match(PHRASE);
			setState(70);
			match(DIFFICULTY);
			setState(71);
			match(COLON);
			setState(72);
			((SectionContext)_localctx).section_difficulty = match(INT);
			setState(73);
			match(LIMIT_QUESTIONS);
			setState(74);
			match(COLON);
			setState(75);
			((SectionContext)_localctx).limit = match(INT);
			setState(76);
			match(QUESTIONS);
			setState(77);
			match(COLON);
			setState(79); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(78);
				question();
				}
				}
				setState(81); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==QUESTION );
			setState(83);
			match(CLOSEBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class QuestionContext extends ParserRuleContext {
		public Token question_id;
		public Token question_statement;
		public Token ques_quotation;
		public Token ques_difficulty;
		public TerminalNode QUESTION() { return getToken(ExamANTLRParser.QUESTION, 0); }
		public TerminalNode ID() { return getToken(ExamANTLRParser.ID, 0); }
		public List<TerminalNode> COLON() { return getTokens(ExamANTLRParser.COLON); }
		public TerminalNode COLON(int i) {
			return getToken(ExamANTLRParser.COLON, i);
		}
		public TerminalNode COMMA() { return getToken(ExamANTLRParser.COMMA, 0); }
		public TerminalNode STATEMENT() { return getToken(ExamANTLRParser.STATEMENT, 0); }
		public TerminalNode TYPE_OF_QUESTION() { return getToken(ExamANTLRParser.TYPE_OF_QUESTION, 0); }
		public BodyContext body() {
			return getRuleContext(BodyContext.class,0);
		}
		public TerminalNode QUOTATION() { return getToken(ExamANTLRParser.QUOTATION, 0); }
		public TerminalNode DIFFICULTY() { return getToken(ExamANTLRParser.DIFFICULTY, 0); }
		public List<TerminalNode> INT() { return getTokens(ExamANTLRParser.INT); }
		public TerminalNode INT(int i) {
			return getToken(ExamANTLRParser.INT, i);
		}
		public TerminalNode PHRASE() { return getToken(ExamANTLRParser.PHRASE, 0); }
		public QuestionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_question; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExamANTLRListener ) ((ExamANTLRListener)listener).enterQuestion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExamANTLRListener ) ((ExamANTLRListener)listener).exitQuestion(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExamANTLRVisitor ) return ((ExamANTLRVisitor<? extends T>)visitor).visitQuestion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final QuestionContext question() throws RecognitionException {
		QuestionContext _localctx = new QuestionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_question);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(85);
			match(QUESTION);
			setState(86);
			match(ID);
			setState(87);
			match(COLON);
			setState(88);
			((QuestionContext)_localctx).question_id = match(INT);
			setState(89);
			match(COMMA);
			setState(90);
			match(STATEMENT);
			setState(91);
			match(COLON);
			setState(92);
			((QuestionContext)_localctx).question_statement = match(PHRASE);
			setState(93);
			match(TYPE_OF_QUESTION);
			setState(94);
			match(COLON);
			setState(95);
			body();
			setState(96);
			match(QUOTATION);
			setState(97);
			match(COLON);
			setState(98);
			((QuestionContext)_localctx).ques_quotation = match(INT);
			setState(99);
			match(DIFFICULTY);
			setState(100);
			match(COLON);
			setState(101);
			((QuestionContext)_localctx).ques_difficulty = match(INT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BodyContext extends ParserRuleContext {
		public Token type_question;
		public MatchingContext matching() {
			return getRuleContext(MatchingContext.class,0);
		}
		public TerminalNode MATCHING() { return getToken(ExamANTLRParser.MATCHING, 0); }
		public Multiple_choiceContext multiple_choice() {
			return getRuleContext(Multiple_choiceContext.class,0);
		}
		public TerminalNode MULTIPLE_CHOICE() { return getToken(ExamANTLRParser.MULTIPLE_CHOICE, 0); }
		public Short_awnserContext short_awnser() {
			return getRuleContext(Short_awnserContext.class,0);
		}
		public TerminalNode SHORT_ANSWER() { return getToken(ExamANTLRParser.SHORT_ANSWER, 0); }
		public NumericalContext numerical() {
			return getRuleContext(NumericalContext.class,0);
		}
		public TerminalNode NUMERICAL() { return getToken(ExamANTLRParser.NUMERICAL, 0); }
		public Missing_wordsContext missing_words() {
			return getRuleContext(Missing_wordsContext.class,0);
		}
		public TerminalNode MISSING_WORDS() { return getToken(ExamANTLRParser.MISSING_WORDS, 0); }
		public True_falseContext true_false() {
			return getRuleContext(True_falseContext.class,0);
		}
		public TerminalNode TRUEORFALSE() { return getToken(ExamANTLRParser.TRUEORFALSE, 0); }
		public BodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_body; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExamANTLRListener ) ((ExamANTLRListener)listener).enterBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExamANTLRListener ) ((ExamANTLRListener)listener).exitBody(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExamANTLRVisitor ) return ((ExamANTLRVisitor<? extends T>)visitor).visitBody(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BodyContext body() throws RecognitionException {
		BodyContext _localctx = new BodyContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_body);
		try {
			setState(115);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case MATCHING:
				enterOuterAlt(_localctx, 1);
				{
				setState(103);
				((BodyContext)_localctx).type_question = match(MATCHING);
				setState(104);
				matching();
				}
				break;
			case MULTIPLE_CHOICE:
				enterOuterAlt(_localctx, 2);
				{
				setState(105);
				((BodyContext)_localctx).type_question = match(MULTIPLE_CHOICE);
				setState(106);
				multiple_choice();
				}
				break;
			case SHORT_ANSWER:
				enterOuterAlt(_localctx, 3);
				{
				setState(107);
				((BodyContext)_localctx).type_question = match(SHORT_ANSWER);
				setState(108);
				short_awnser();
				}
				break;
			case NUMERICAL:
				enterOuterAlt(_localctx, 4);
				{
				setState(109);
				((BodyContext)_localctx).type_question = match(NUMERICAL);
				setState(110);
				numerical();
				}
				break;
			case MISSING_WORDS:
				enterOuterAlt(_localctx, 5);
				{
				setState(111);
				((BodyContext)_localctx).type_question = match(MISSING_WORDS);
				setState(112);
				missing_words();
				}
				break;
			case TRUEORFALSE:
				enterOuterAlt(_localctx, 6);
				{
				setState(113);
				((BodyContext)_localctx).type_question = match(TRUEORFALSE);
				setState(114);
				true_false();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class True_falseContext extends ParserRuleContext {
		public Token trueOrFalse_answer;
		public TerminalNode ANSWER() { return getToken(ExamANTLRParser.ANSWER, 0); }
		public TerminalNode COLON() { return getToken(ExamANTLRParser.COLON, 0); }
		public TerminalNode TRUE() { return getToken(ExamANTLRParser.TRUE, 0); }
		public TerminalNode FALSE() { return getToken(ExamANTLRParser.FALSE, 0); }
		public True_falseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_true_false; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExamANTLRListener ) ((ExamANTLRListener)listener).enterTrue_false(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExamANTLRListener ) ((ExamANTLRListener)listener).exitTrue_false(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExamANTLRVisitor ) return ((ExamANTLRVisitor<? extends T>)visitor).visitTrue_false(this);
			else return visitor.visitChildren(this);
		}
	}

	public final True_falseContext true_false() throws RecognitionException {
		True_falseContext _localctx = new True_falseContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_true_false);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(117);
			match(ANSWER);
			setState(118);
			match(COLON);
			setState(119);
			((True_falseContext)_localctx).trueOrFalse_answer = _input.LT(1);
			_la = _input.LA(1);
			if ( !(_la==TRUE || _la==FALSE) ) {
				((True_falseContext)_localctx).trueOrFalse_answer = (Token)_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Missing_wordsContext extends ParserRuleContext {
		public TerminalNode ANSWER() { return getToken(ExamANTLRParser.ANSWER, 0); }
		public TerminalNode COLON() { return getToken(ExamANTLRParser.COLON, 0); }
		public TerminalNode OPENBRACE() { return getToken(ExamANTLRParser.OPENBRACE, 0); }
		public TerminalNode CLOSEBRACE() { return getToken(ExamANTLRParser.CLOSEBRACE, 0); }
		public List<Missing_answerContext> missing_answer() {
			return getRuleContexts(Missing_answerContext.class);
		}
		public Missing_answerContext missing_answer(int i) {
			return getRuleContext(Missing_answerContext.class,i);
		}
		public Missing_wordsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_missing_words; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExamANTLRListener ) ((ExamANTLRListener)listener).enterMissing_words(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExamANTLRListener ) ((ExamANTLRListener)listener).exitMissing_words(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExamANTLRVisitor ) return ((ExamANTLRVisitor<? extends T>)visitor).visitMissing_words(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Missing_wordsContext missing_words() throws RecognitionException {
		Missing_wordsContext _localctx = new Missing_wordsContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_missing_words);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(121);
			match(ANSWER);
			setState(122);
			match(COLON);
			setState(123);
			match(OPENBRACE);
			setState(125); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(124);
				missing_answer();
				}
				}
				setState(127); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==ANSWER );
			setState(129);
			match(CLOSEBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
